<resources>
    <string name="app_name">MapBox Navigation</string>
    <string name="access_token">pk.eyJ1IjoiYXJhaGFrb2J5YW4iLCJhIjoiY2l6NThsbnNnMDA0NzMybHd6ZHplc2luayJ9.FGQT6BNIBoegb6pGXVqV6g</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_user_name_hint">Phone, email or username</string>
    <string name="login_password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //login view

    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="welcome">Welcome to Friendly Chat</string>

</resources>
