<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:layout_centerInParent="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <com.example.aro_pc.myapplication.custom_view.MyEditText
                    android:hint="@string/login_user_name_hint"
                    android:id="@+id/login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.example.aro_pc.myapplication.custom_view.MyEditText
                    android:inputType="textPassword"
                    android:hint="@string/login_password_hint"
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/create_account_button"
                    android:text="@string/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/sign_in_button"
                    android:text="@string/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>