<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_layout_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"
                android:weightSum="3.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:textColor="@color/colorLoginTextWhite"
                        android:gravity="center"
                        android:text="@string/welcome"
                        android:textSize="@dimen/login_bit_text_view_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:src="@drawable/ic_account_box_black_24dp"/>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"
                android:weightSum="2">

                <FrameLayout
                    android:layout_weight="0.35"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.example.aropc.myapplication.custom_view.MyEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/login_user_name_hint"
                                android:textColor="@color/colorLoginTextWhite"
                                android:textColorHint="@color/colorLoginTextWhite"
                                android:textSize="@dimen/login_small_text_view_size"/>

                            <com.example.aropc.myapplication.custom_view.MyEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:textColor="@color/colorLoginTextWhite"
                                android:textColorHint="@color/colorLoginTextWhite"
                                android:textSize="@dimen/login_small_text_view_size"/>

                        </LinearLayout>


                    </LinearLayout>

                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="2">


                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorSignIn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorLoginTextWhite"
                        android:textSize="@dimen/login_normal_text_view_size"/>
                </FrameLayout>

                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorLoginTextWhite"
                        android:textSize="@dimen/login_normal_text_view_size"/>

                </FrameLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>